<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#000000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/style_layout_main_toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="682dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/main_button_menu"
            style="@style/style_button_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ellipsize="none"
            android:foregroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:maxHeight="35dp"
            android:text="@string/text_main_toolbar_menu"
            android:textColor="@color/black"
            app:cornerRadius="@null"
            app:icon="@drawable/ic_menu_foreground"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/main_button_home"
            style="@style/style_button_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ellipsize="none"
            android:foregroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/text_main_toolbar_home"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:cornerRadius="@null"
            app:icon="@drawable/ic_home_foreground"
            app:iconPadding="0dp"
            app:iconSize="70dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/main_button_back"
            style="@style/style_button_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ellipsize="none"
            android:foregroundTint="@color/black"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/text_main_toolbar_back"
            android:textColor="@color/black"
            app:cornerRadius="@null"
            app:icon="@drawable/ic_back_foreground"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:iconSize="70dp"
            app:iconTint="@color/black" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_navigationView_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#B33F51B5"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/main_button_menu_todolist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_main_menu_todolist" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/main_button_menu_personae"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_main_menu_personae" />
            </TableRow>

        </TableLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>